[gd_scene load_steps=4 format=3 uid="uid://7gp4paf83bgj"]

[ext_resource type="Texture2D" uid="uid://rf7603w6lh4k" path="res://asset/frame_spech_green.png" id="1_7l7ef"]
[ext_resource type="Script" uid="uid://dco6ei5v3288u" path="res://scripts/clue_image_ui.gd" id="1_prj8g"]
[ext_resource type="Texture2D" uid="uid://canujjt0jwhpo" path="res://asset/Golden.png" id="2_17uqj"]

[node name="ClueImageUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prj8g")

[node name="CluePanel" type="NinePatchRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7l7ef")
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CluePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Img" type="TextureRect" parent="CluePanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_17uqj")
expand_mode = 1

[node name="ContentLayer" type="Control" parent="CluePanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
